// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "ensureNonZero",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "float",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "safeAddressRange": {
          "byteAddress": 4,
          "memoryId": "output",
          "safeByteLength": 4,
          "source": "memory-start",
        },
        "type": "literal",
        "value": 4,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [],
    "instruction": "ensureNonZero",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
]
`;

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local f32)
    i32.const 4
    i32.const 0
    f32.load
    local.set 0
    local.get 0
    f32.const 0x0p+0 (;=0;)
    f32.eq
    if  ;; label = @1
      f32.const 0x1p+0 (;=1;)
      local.set 0
    end
    local.get 0
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "ensureNonZero",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "safeAddressRange": {
          "byteAddress": 4,
          "memoryId": "output",
          "safeByteLength": 4,
          "source": "memory-start",
        },
        "type": "literal",
        "value": 4,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [],
    "instruction": "ensureNonZero",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
]
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 4
    i32.const 0
    i32.load
    local.set 0
    local.get 0
    i32.eqz
    if (result i32)  ;; label = @1
      i32.const 1
    else
      local.get 0
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
